Prevent page headings from wrapping.

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -135,6 +135,7 @@ $subpage-header-height: 352px;
     }
 
     .subpage-title {
+        width: 100%;
         color: $white;
         font-family: "dcrweb-poppins", "Verdana", sans-serif;;
         font-size: 34px;
